--- a/server/build.gradle
+++ b/server/build.gradle
@@ -26,6 +26,13 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//mapstruct 설정 추가
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
+	//aws 설정 추가
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.281'
 }
 
 tasks.named('test') {
