--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,8 +1,21 @@
+logging:
+  level:
+    org:
+      springframework:
+        orm:
+          jpa: DEBUG
+
 spring:
   jpa:
     hibernate:
+      dialect: org.hibernate.dialect.MySQL5InnoDBDialect
       ddl-auto: create
     show-sql: true
+    defer-datasource-initialization: true
+
+  sql:
+    init:
+      mode: always
 
   profiles:
     include:
