--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -57,8 +57,8 @@ jobs:
           spring.datasource.url: ${{ secrets.DATASOURCE_URL }}
           spring.datasource.username: ${{ secrets.DATASOURCE_USERNAME }}
           spring.datasource.password: ${{ secrets.DATASOURCE_PW }}
-          cloud.aws.credentials.access-key: ${{ secrets.AWS_ACCESS_KEY }}
-          cloud.aws.credentials.secret-key: ${{ secrets.SECRET_ACCESS_KEY }}
+          cloud.aws.credentials.accessKey: ${{ secrets.AWS_ACCESS_KEY }}
+          cloud.aws.credentials.secretKey: ${{ secrets.SECRET_ACCESS_KEY }}
           cloud.aws.s3.bucket: ${{ secrets.BUCKET_NAME }}
 
     - name: Grant execute permission for gradlew
