(#93) fix : 배포용 yml 파일 수정

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -9,13 +9,13 @@ spring:
   jpa:
     hibernate:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
-    defer-datasource-initialization: true
+  #   defer-datasource-initialization: true
 
-  sql:
-    init:
-      mode: always
+  # sql:
+  #   init:
+  #     mode: always
 
   profiles:
     include:
