--- a/server/src/main/resources/application-prod.yml
+++ b/server/src/main/resources/application-prod.yml
@@ -9,20 +9,20 @@ spring:
   jpa:
     hibernate:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
-    defer-datasource-initialization: true
+    # defer-datasource-initialization: true
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${ MYSQL_URL }
     username: ${ MYSQL_USERNAME }
     password: ${ MYSQL_PWD }
-    data: classpath:data.sql
+  #   data: classpath:data.sql
 
-  sql:
-    init:
-      mode: always
+  # sql:
+  #   init:
+  #     mode: always
 
 server:
   port : 8080
