--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "^2.1.3",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.2",
+    "sweetalert2": "^11.4.37",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.1"
   },
