(#36) feat : 이미지 삭제 배치 처리

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -17,6 +17,12 @@ spring:
   # init:
   #  mode: always
 
+  batch:
+    jdbc:
+      initialize-schema: always
+    job:
+      enabled: false
+
   profiles:
     include:
       - db
