--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -9,13 +9,26 @@ spring:
   jpa:
     hibernate:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
-    defer-datasource-initialization: true
+    #defer-datasource-initialization: true
+  redis:
+    host: localhost
+    port: 6379
+  #sql:
+   #init:
+    #mode: always
 
-  sql:
-    init:
-      mode: always
+  batch:
+    jdbc:
+      initialize-schema: always
+    job:
+      enabled: false
+
+  servlet:
+    multipart:
+      maxFileSize: 10MB
+      maxRequestSize: 10MB
 
   profiles:
     include:
