--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "zustand": "^4.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
