--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -7,17 +7,20 @@ logging:
 
 spring:
   jpa:
+    properties:
+      hibernate:
+        default_batch_fetch_size: 1000
     hibernate:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
-    #defer-datasource-initialization: true
+    defer-datasource-initialization: true
   redis:
     host: localhost
     port: 6379
-  #sql:
-   #init:
-    #mode: always
+  sql:
+   init:
+    mode: always
 
   batch:
     jdbc:
